--- a/profile/style.css
+++ b/profile/style.css
@@ -39,7 +39,7 @@ li{
 .cover{
     width: 100%;
     height: 120px;
-    background: url("/acs/head.jpg");
+    background: url("acs/head.jpg");
     background-position: center center;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -69,7 +69,7 @@ li{
     top: 65px;
     border-radius: 100%;
     background-size: 100% 100%;
-    background-image: url("/acs/arefeh.jpg");
+    background-image: url("acs/arefeh.jpg");
     padding: 5px;
     border: 1px solid snow;
     cursor: pointer;
